Ejercicio 03 - Añadida el icono de una lupa en la barra de busqueda

--- a/Ejercicio_03/css/style.css
+++ b/Ejercicio_03/css/style.css
@@ -43,3 +43,12 @@
 .nav-item {
     cursor: pointer;
 }
+
+form {
+    position: relative;
+}
+
+#search-icon {
+    position: absolute;
+    right: 20px;
+}
